--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -136,8 +136,8 @@
                             <tr>
                                 <th>Nhiệm Vụ</th>
                                 <th>Tạo Bởi</th>
-                                <th>Hạn Chốt</th>
-                                <th>Trạng thái</th>
+                                <th>Hạn Chót</th>
+                                <th>Trạng Thái</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -205,7 +205,7 @@
                             <tr>
                                 <th>Nhiệm Vụ</th>
                                 <th>Tạo Bởi</th>
-                                <th>Hạn Chốt</th>
+                                <th>Hạn Chót</th>
                             </tr>
                         </thead>
                         <tbody>
